@@ -3,6 +3,7 @@ Overview of changes in lightdm 0.2.1
     * Use "lightdm" as default PAM service and make it configurable
     * Rename libldmgreeter to libldmgreeter-gobject
     * Add libldmgreeter-qt (David Edmundson)
+    * Fix gobject-introspection build
 
 Overview of changes in lightdm 0.2.0
 
